--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*******/
+
+.wrapper {
+  &-content,
+  &-responsive {
+    @apply mx-auto max-w-screen-2xl p-6;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+.header-links a {
+  @apply transition-colors duration-300;
 }
