--- a/src/components/home/Kickstarter.module.scss
+++ b/src/components/home/Kickstarter.module.scss
@@ -1,89 +1,58 @@
 .book-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1000px;
+  @apply grid place-items-center;
+  perspective: 700px;
+  transform: translateY(-2rem);
+}
+
+.book {
+  --anim-rotation-init: 35deg;
+  --book-shadow-c: rgb(13 13 13 / 0.2);
+  @apply relative select-none;
+  width: var(--book-width);
+  height: var(--book-height);
+  transform-style: preserve-3d;
+  transform: rotateY(var(--anim-rotation-init));
+  transition: 1s ease;
+  animation: 900ms ease 0s initAnimation;
+
+  &:hover {
+    transform: rotateY(-24deg);
+  }
+
+  > :first-child {
+    @apply absolute top-0 left-0;
+    width: var(--book-width);
+    height: var(--book-height);
+    transform: translateZ(7.5px);
+    background-color: var(--book-cover-bg);
+    box-shadow: 5px 5px 20px var(--book-shadow-c);
+  }
+
+  &::before {
+    content: " ";
+    @apply absolute left-0 top-0 bottom-0;
+    width: 13px;
+    height: var(--book-height);
+    transform: translateX(-7.1px) rotateY(90deg);
+    background: #fff;
+  }
+
+  &::after {
+    content: "";
+    @apply absolute top-0 left-0;
+    width: var(--book-width);
+    height: var(--book-height);
+    transform: translateZ(-7.5px);
+    background-color: var(--book-cover-bg);
+    box-shadow: -10px 0 16px 10px var(--book-shadow-c);
+  }
 }
 
 @keyframes initAnimation {
   0% {
-    transform: rotateY(0deg);
+    transform: rotateY(10deg) rotateX(45deg) translateX(-10rem);
   }
   100% {
-    transform: rotateY(-44deg);
+    transform: rotateY(var(--anim-rotation-init));
   }
-}
-
-.book {
-  width: 225px;
-  height: 300px;
-  position: relative;
-  transform-style: preserve-3d;
-  transform: rotateY(-44deg);
-  transition: 1s ease;
-  animation: 1s ease 0s 1 initAnimation;
-}
-
-.book:hover {
-  transform: rotateY(0deg);
-}
-
-.book > :first-child {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: red;
-  width: 225px;
-  height: 300px;
-  transform: translateZ(7.5px);
-  background-color: #01060f;
-  border-radius: 0 0px 0px 0;
-  box-shadow: 5px 5px 20px #666;
-}
-
-.book::before {
-  position: absolute;
-  content: ' ';
-  background-color: blue;
-  left: 0;
-  top: 4px;
-  width: 13px;
-  height: 292px;
-  transform: translateX(213.5px) rotateY(90deg);
-  background: linear-gradient(90deg, 
-    #fff 0%,
-    #f9f9f9 5%,
-    #fff 10%,
-    #f9f9f9 15%,
-    #fff 20%,
-    #f9f9f9 25%,
-    #fff 30%,
-    #f9f9f9 35%,
-    #fff 40%,
-    #f9f9f9 45%,
-    #fff 50%,
-    #f9f9f9 55%,
-    #fff 60%,
-    #f9f9f9 65%,
-    #fff 70%,
-    #f9f9f9 75%,
-    #fff 80%,
-    #f9f9f9 85%,
-    #fff 90%,
-    #f9f9f9 95%,
-    #fff 100%
-    );
-}
-
-.book::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: ' ';
-  width: 225px;
-  height: 300px;
-  transform: translateZ(-7.5px);
-  background-color: #01060f;
-  border-radius: 0 0px 0px 0;
-  box-shadow: -10px 0 50px 10px #666;
 }
